--- a/sample/app/src/main/res/layout/activity_main.xml
+++ b/sample/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
     tools:context="com.dx168.fastdex.sample.MainActivity">
 
     <include
+        android:id="@+id/my_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         layout="@layout/my_view" />
@@ -18,7 +19,8 @@
         android:id="@+id/btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="btn"/>
+        android:text="btn"
+        android:layout_below="@+id/my_view"/>
 
     <TextView
         android:id="@+id/textview"
