--- a/sample/app/src/main/res/layout/activity_main.xml
+++ b/sample/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:textColor="#ffffff"
         android:layout_centerInParent="true"
-        android:text="Fastdex sample1"/>
+        android:text="Fastdex sample"/>
 
     <com.dx168.fastdex.sample.common.CommonView
         android:layout_width="wrap_content"
